k8s/petclinic/petclinic-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
    app: petclinic
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - image: jzwaylove/petclinic-mysql:latest
        name: petclinic
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 3
          periodSeconds: 10
      terminationGracePeriodSeconds: 30
